RESOLVED FIXED122405
[CSSRegions] Computed z-Index should return 0 instead of auto for a region
https://bugs.webkit.org/show_bug.cgi?id=122405
Summary [CSSRegions] Computed z-Index should return 0 instead of auto for a region
Mihnea Ovidenie
Reported 2013-10-05 22:29:19 PDT
Because a region establishes a stacking context.
Attachments
Patch (7.52 KB, patch)
2013-10-05 22:34 PDT, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2013-10-05 22:34:13 PDT
Mihnea Ovidenie
Comment 2 2013-10-07 04:37:27 PDT
Regarding the test file, i tested the behavior of browsers with a similar test with opacity instead of -webkit-flow-from. Only the WebKit browsers return 0, the other browsers FF/IE/Opera return auto. Since region elements do not have children and paint the flow thread content, i resorted to this test since we already have tests for regions as stacking contexts with siblings.
Mihnea Ovidenie
Comment 3 2013-10-07 04:44:30 PDT
An old (related) WebKit bug: https://bugs.webkit.org/show_bug.cgi?id=15562 about computed zIndex.
Andrei Bucur
Comment 4 2013-10-08 10:07:18 PDT
Comment on attachment 213496 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=213496&action=review > Source/WebCore/rendering/style/RenderStyle.h:892 > + bool hasStyleRegion() const { return !rareNonInheritedData->m_regionThread.isNull(); } Would "isNamedFlowRegion" be more precise?
Dave Hyatt
Comment 5 2013-10-08 10:09:47 PDT
Comment on attachment 213496 [details] Patch r=me,
WebKit Commit Bot
Comment 6 2013-10-08 10:32:18 PDT
Comment on attachment 213496 [details] Patch Clearing flags on attachment: 213496 Committed r157121: <http://trac.webkit.org/changeset/157121>
WebKit Commit Bot
Comment 7 2013-10-08 10:32:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.