[CSSRegions] Computed z-Index should return 0 instead of auto for a region https://bugs.webkit.org/show_bug.cgi?id=122405

Reviewed by David Hyatt.

Source/WebCore:

Test: fast/regions/layers/region-zIndex-computedStyle.html

Adjust the z-index value for a region. Also, since a box with a z-Index
that is non-auto receives a layer, i removed the requiresLayer override
in RenderRegion and RenderMultiColumnSet.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::adjustRenderStyle):
* rendering/RenderMultiColumnSet.cpp:
* rendering/RenderMultiColumnSet.h:
* rendering/RenderRegion.cpp:
* rendering/RenderRegion.h:
* rendering/style/RenderStyle.h:

LayoutTests:

* fast/regions/layers/region-zIndex-computedStyle-expected.txt: Added.
* fast/regions/layers/region-zIndex-computedStyle.html: Added.


Canonical link: https://commits.webkit.org/140590@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157121 268f45cc-cd09-0410-ab3c-d52691b4dbfc