Source/WebCore/css/StyleResolver.cpp
@@ -1268,6 +1268,7 @@ void StyleResolver::adjustRenderStyle(RenderStyle* style, RenderStyle* parentSty
         || style->hasBlendMode()
         || style->position() == StickyPosition
         || (style->position() == FixedPosition && e && e->document().page() && e->document().page()->settings().fixedPositionCreatesStackingContext())
+        || style->hasStyleRegion()
         ))
         style->setZIndex(0);
 
